# logistics-management-platform

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
