[project]
name = "logistics-management-platform"
version = "0.1.0"
description = "Logistics Management Platform API"
requires-python = ">=3.12"

dependencies = [
"fastapi>=0.116.0",
"uvicorn[standard]>=0.35.0",
"sqlalchemy>=2.0.41",
"alembic>=1.16.2",
"psycopg[binary]>=3.2.9",
"redis>=6.2.0",
"pydantic-settings>=2.10.1",
"python-jose[cryptography]>=3.5.0",
"passlib[bcrypt]>=1.7.4",
"python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
"pytest>=8.4.1",
"pytest-asyncio>=1.0.0",
"httpx>=0.28.1",
"ruff>=0.12.1"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
